<resources>
    <string name="app_name">Exercise 3</string>
    <string name="Age">Age :</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Smoke">Smoke :</string>
    <string name="CheckSmoke">Yes</string>
    <string name="Total">Total Premium :</string>
    <string name="Calculate">Calculate</string>
    <string name="Reset">Reset</string>

    <string-array name="AgeRange2">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
        <item>More than 55</item>
    </string-array>

    <string name="Gender">Gender :</string>
</resources>
