<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Spinner
        android:id="@+id/spinnerAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:entries="@array/AgeRange2"
        app:layout_constraintBottom_toBottomOf="@+id/textAge"
        app:layout_constraintStart_toEndOf="@+id/textAge"
        app:layout_constraintTop_toTopOf="@+id/textAge" />

    <TextView
        android:id="@+id/textGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/Gender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAge"
        app:layout_constraintVertical_bias="0.048" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="151dp"
        android:layout_height="31dp"
        android:layout_marginStart="27dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textGender"
        app:layout_constraintStart_toEndOf="@+id/textGender"
        app:layout_constraintTop_toTopOf="@+id/textGender">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textSmoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/Smoke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGender" />

    <CheckBox
        android:id="@+id/checkSmokeYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/CheckSmoke"
        app:layout_constraintBottom_toBottomOf="@+id/textSmoke"
        app:layout_constraintStart_toEndOf="@+id/textSmoke"
        app:layout_constraintTop_toTopOf="@+id/textSmoke" />

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/Total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSmoke" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="88dp"
        android:text="@string/Calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTotal" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="88dp"
        android:text="@string/Reset"
        app:layout_constraintStart_toEndOf="@+id/buttonCalculate"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textTotal"
        app:layout_constraintStart_toEndOf="@+id/textTotal"
        app:layout_constraintTop_toTopOf="@+id/textTotal"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>